config page image alignment progress

--- a/config-nemesis.html
+++ b/config-nemesis.html
@@ -6,14 +6,18 @@
     <link rel="stylesheet" href="flex.css">
     <title>config-nemesis</title>
 </head>
-<body class="config_controller">
-    <img class="image_config_controller" src="trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.jpg" width="80%" alt="config">
+<body>
     <article class="config_option-controller">
+        <div class="config_image">
+            <img class="image_config_controller" src="trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.jpg" alt="nemesis image for configurator page">
+        </div>
+        <div class="config_options">
             <a href="nemesis_color-orange.html">PAINT JOB</a>
             <a href="nem_hubcap1.html">HUBCAPS</a>
             <a href="nem_hubcap-polished.html">LOGO DESIGNS</a>        
             <a href="nem_tint_original.html">WINDOW TINT</a>
             <a href="nem_headlight-caliper1.html">HEADLIGHTS AND BRAKE CALIPERS</a>
+        </div>
     </article>
         
     <footer>
