--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                   <li><a href="merch.html">Merch</a></li>
                   <li><a href="account.html">Account</a></li>
                   <li><a href="models-configurator.html">Configurator</a></li>
-                  <li><a href="shopping_cart.html">Shopping Cart</a></li>
+                  <li><a href="shopping_Shopping Cart.html">Shopping Shopping Cart</a></li>
                 </ul>
               </li>
             </ul>
