--- a/merch.html
+++ b/merch.html
@@ -19,7 +19,7 @@
             <li><a href="merch.html">Merch</a></li>
             <li><a href="account.html">Account</a></li>
             <li><a href="models-configurator.html">Configurator</a></li>
-            <li><a href="shopping_cart.html">Cart</a></li>
+            <li><a href="shopping_Shopping Cart.html">Shopping Cart</a></li>
           </ul>
         </li>
       </ul>
@@ -28,7 +28,7 @@
 
   <section id="merch-header">
     <h1 style="color: white;">Merch</h1>
-    <img src="merch image/shopping_cart-removebg-preview.png" width="45rem">
+    <img src="merch image/shopping_Shopping Cart-removebg-preview.png" width="45rem">
   </section>
 
   <section class="merch-item">
