--- a/shirts.html
+++ b/shirts.html
@@ -51,7 +51,7 @@
                   <li><a href="merch.html">Merch</a></li>
                   <li><a href="account.html">Account</a></li>
                   <li><a href="models-configurator.html">Configurator</a></li>
-                  <li><a href="shopping_cart.html">Cart</a></li>
+                  <li><a href="shopping_Shopping Cart.html">Shopping Cart</a></li>
                 </ul>
               </li>
             </ul>
@@ -60,7 +60,7 @@
 
     <section id="merch-header">
         <h1 style="color: white;">Merch</h1>
-        <img src="merch image/shopping_cart-removebg-preview.png" width="45rem">
+        <img src="merch image/shopping_Shopping Cart-removebg-preview.png" width="45rem">
     </section>
 
     <section>
@@ -70,7 +70,7 @@
     <section class="shirt-row">
         <article class="shirt-container">
             <div>
-                <a href="shopping_cart.html">
+                <a href="shopping_Shopping Cart.html">
                 <img src="merch image/T-shirts_trion_merch - Copy.png">
                 </a>
             </div>
