--- a/shoes.html
+++ b/shoes.html
@@ -19,7 +19,7 @@
                   <li><a href="merch.html">Merch</a></li>
                   <li><a href="account.html">Account</a></li>
                   <li><a href="models-configurator.html">Configurator</a></li>
-                  <li><a href="shopping_cart.html">Cart</a></li>
+                  <li><a href="shopping_Shopping Cart.html">Shopping Cart</a></li>
                 </ul>
               </li>
             </ul>
