--- a/shopping_cart.html
+++ b/shopping_cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="shopping_Shopping Cart.css">
+    <link rel="stylesheet" href="shopping_cart.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
               <li><a href="merch.html">Merch</a></li>
               <li><a href="account.html">Account</a></li>
               <li><a href="models-configurator.html">Configurator</a></li>
-              <li><a href="shopping_Shopping Cart.html">Shopping Cart</a></li>
+              <li><a href="shopping_cart.html">Shopping Cart</a></li>
             </ul>
           </li>
         </ul>
