--- a/merch.html
+++ b/merch.html
@@ -25,10 +25,18 @@
       </ul>
     </nav>
   </header>
-
+  <style>
+    h1 {
+      margin: 7rem;
+      padding: 1rem;;
+      color: white;
+      font-size: 350%;
+    }
+  </style>
+  
   <section id="merch-header">
-    <h1 style="color: white;">Merch</h1>
-    <img src="merch image/shopping_Shopping Cart-removebg-preview.png" width="45rem">
+    <h1>Merch</h1>
+    <img src="merch image/shopping_Cart-removebg-preview.png" width="45rem">
   </section>
 
   <section class="merch-item">
