config home page update

--- a/config-nemesis.html
+++ b/config-nemesis.html
@@ -6,6 +6,22 @@
     <link rel="stylesheet" href="flex.css">
     <title>config-nemesis</title>
 </head>
+<nav role="navigation">
+    <ul>
+      <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+      <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="models.html">Models</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="merch.html">Merch</a></li>
+          <li><a href="account.html">Account</a></li>
+          <li><a href="models-configurator.html">Configurator</a></li>
+          <li><a href="shopping_Shopping Cart.html">Shopping Shopping Cart</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
 <body>
     <article class="config_option-controller">
         <div class="config_image">
@@ -17,6 +33,8 @@
             <a href="nem_hubcap-polished.html">LOGO DESIGNS</a>        
             <a href="nem_tint_original.html">WINDOW TINT</a>
             <a href="nem_headlight-caliper1.html">HEADLIGHTS AND BRAKE CALIPERS</a>
+            <a href="account_config_history.html">Your Configurations</a>
+            <a href="nemesis.html">About the Nemesis</a>        
         </div>
     </article>
         
@@ -30,12 +48,12 @@
           <p>________________________</p>
           <p>Call us: #(123)456-7890</p>
         </section>
-        <article class="footer_buttons">
-          <a href="#">ACCESSIBILITY</a>
-          <a href="#">MODELS</a>
-          <a href="#">MERCH</a>
-          <a href="#">ABOUT US</a>
-        </section>
+         <section class="footer_buttons">     
+          <a href="models.html">MODELS</a>
+          <a href="about-us.html">ABOUT US</a> 
+          <a href="merch.html">MERCH </a>
+          <a href="account.html">ACCOUNT</a>                               
+          <a href="models-configurator.html">CONFIGURATOR</a>
     </footer>
     <article class="footer_extra">
         <p>Created by Lukas and Jack; November 2024</p>
