--- a/change-apply-confirmation.html
+++ b/change-apply-confirmation.html
@@ -42,12 +42,11 @@
           <p>________________________</p>
           <p>Call us: #(123)456-7890</p>
         </section>
-        <article class="footer_buttons">
-          <a href="#">ACCESSIBILITY</a>
-          <a href="#">MODELS</a>
-          <a href="#">MERCH</a>
-          <a href="#">ABOUT US</a>
-        </section>
+         <section class="footer_buttons">     
+          <a href="models.html">MODELS</a>
+          <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+          <a href="account.html">ACCOUNT</a>                               
+          <a href="models-configurator.html">CONFIGURATOR</a>
     </footer>
     <article class="footer_extra">
       <p>Created by Lukas and Jack; November 2024</p>
