--- a/models-configurator.html
+++ b/models-configurator.html
@@ -26,11 +26,21 @@
       </nav>
     </header>
         <article>
-            <section>
-                <img src="/trion_homepage_images/yellow-1024x682.png">
+            <section >
+                <img class="hero_image" src="/trion_homepage_images/yellow-1024x682.png" alt="hero_image-for-configurator-home-page">
             </section>
             <section>
-                <p>CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR CONFIGURATOR</p>
+                <h1>CONFIGURATOR</h1>
+                <p>Take the Trion beasts and make them yours.</p><br>
+                <p>This page allows you to configurate Trion's Vehicles here.</p>
+            </section>
+            <section>
+                <h2>NEMESIS CONFIGURATOR</h2>
+                <a>Configurate Interior</a>
+                <a>Configurate Exterior</a>
+                <h2>BLACK WIDOW CONFIGURATOR</h2>
+                <a>Configurate Interior</a>
+                <a>Configurate Exterior</a>
             </section>
         </article>
     <footer>
@@ -43,12 +53,11 @@
           <p>________________________</p>
           <p>Call us: #(123)456-7890</p>
         </section>
-        <article class="footer_buttons">
-          <a href="#">ACCESSIBILITY</a>
-          <a href="#">MODELS</a>
-          <a href="#">MERCH</a>
-          <a href="#">ABOUT US</a>
-        </section>
+         <section class="footer_buttons">     
+          <a href="models.html">MODELS</a>
+          <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+          <a href="account.html">ACCOUNT</a>                               
+          <a href="models-configurator.html">CONFIGURATOR</a>
     </footer>
     <article class="footer_extra">
         <p>Created by Lukas and Jack; November 2024</p>
