Models configuration page kinda works and is operable

--- a/models-configurator.html
+++ b/models-configurator.html
@@ -25,22 +25,21 @@
         </ul>
       </nav>
     </header>
-        <article>
-            <section >
-                <img class="hero_image" src="/trion_homepage_images/yellow-1024x682.png" alt="hero_image-for-configurator-home-page">
+        <article class="config_text-container">
+            <section>
+                <img class="hero_image_config-page" src="/trion_homepage_images/yellow-1024x682.png" alt="hero_image-for-configurator-home-page">
             </section>
             <section>
                 <h1>CONFIGURATOR</h1>
-                <p>Take the Trion beasts and make them yours.</p><br>
-                <p>This page allows you to configurate Trion's Vehicles here.</p>
+                <p>Take the Trion beasts and make them yours. This page allows you to configurate Trion's Vehicles here.</p>
             </section>
             <section>
                 <h2>NEMESIS CONFIGURATOR</h2>
-                <a>Configurate Interior</a>
-                <a>Configurate Exterior</a>
+                <a class="interior-exterior_selection" href="interior-nemesis.html">Configurate Exterior<img class="image-button" src="/trion_homepage_images/Nemesis_Interior_render1-1024x575.jpg" alt="configurate nemesis"></a>
+                <a class="interior-exterior_selection" href="config-nemesis.html">Configurate Interior<img class="image-button" src="/trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.png" alt="configurate nemesis"></a>
                 <h2>BLACK WIDOW CONFIGURATOR</h2>
-                <a>Configurate Interior</a>
-                <a>Configurate Exterior</a>
+                <a class="interior-exterior_selection" href="config-black_widow.html">Configurate Interior<img class="image-button-2" src="/trion_homepage_images/racing_blk-widow.avif" alt="configurate nemesis"></a>
+                <a class="interior-exterior_selection" href="interior-black_widow.html">Configurate Exterior<img class="image-button" src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" alt="configurate nemesis"></a>
             </section>
         </article>
     <footer>
