--- a/nemesis_color-green.html
+++ b/nemesis_color-green.html
@@ -9,7 +9,7 @@
 <body class="background_for_config">
     <article class="next_prev-controller">
         <a href="nemesis_color-rose.html">ROSE</a>
-        <a class="equip_button_controller" href="/about-us.html">APPLY COLOR</a>
+        <a class="equip_button_controller" href="/change-apply-confirmation.html">APPLY COLOR</a>
         <img src="/trion_homepage_images/green_trion_car.jpg" width="100%" alt="config">
         <a href="nemesis_color-hotpink.html">HOTPINK</a>
     </article>
