--- a/nemesis_color-navy.html
+++ b/nemesis_color-navy.html
@@ -9,7 +9,7 @@
 <body class="background_for_config">
     <article class="next_prev-controller">
         <a href="/nemesis_color-yellow.html">YELLOW</a>
-        <a class="equip_button_controller" href="/about-us.html">APPLY COLOR</a>
+        <a class="equip_button_controller" href="/change-apply-confirmation.html">APPLY COLOR</a>
         <img src="/trion_homepage_images/blue trion car.jpg" width=100% alt="config">
         <a href="/nemesis_color-black.html">BLACK</a>
     </article>
