Hubcap pages work

--- a/change-apply-confirmation.html
+++ b/change-apply-confirmation.html
@@ -27,7 +27,7 @@
           </nav>
     </header>
 
-    <article class="">
+    <article class="text-container-apply-confirm">
         <h1>CHANGE APPLIED</h1>
         <a href="config-nemesis.html">BACK TO CONFIGURATOR</a>
     </article>
