--- a/hoodies.html
+++ b/hoodies.html
@@ -32,25 +32,25 @@
 
     <section>
         <article>
-            <img src="merch image/T-shirts_trion_merch.png">
-            <img src="merch image/white shirt.png">
-            <img src="merch image/blue shirt.png">
+            <img src="merch image/Hoodies_trion_merch.png">
+            <img src="merch image/red trion hoodies.png">
+            <img src="merch image/blue trion hoodies.png">
         </article>
     </section>
 
     <section>
         <article>
-            <img src="merch image/grey shirt.png">
-            <img src="merch image/Orange_Nemesis.png">
-            <img src="merch image/black shirt.png">
+            <img src="merch image/brown trion hoodies.png">
+            <img src="merch image/green trion hoodies.png">
+            <img src="merch image/white trion hoodies.png">
         </article>
     </section>
 
     <section>
         <article>
-            <img src="merch image/big logo black shirt.png">
-            <img src="merch image/big logo grey shirt.png">
-            <img src="merch image/big logo white shirt.png">
+            <img src="merch image/orange trion hoodies.png">
+            <img src="merch image/purple trion hoodies.png">
+            <img src="merch image/yellow trion hoodies.png">
         </article>
     </section>
     
