--- a/hats.html
+++ b/hats.html
@@ -32,25 +32,25 @@
 
     <section>
         <article>
-            <img src="merch image/T-shirts_trion_merch.png">
-            <img src="merch image/white shirt.png">
-            <img src="merch image/blue shirt.png">
+            <img src="merch image/Hats_trion_merch.png">
+            <img src="merch image/blue trion hat.png">
+            <img src="merch image/grey trion hat.png">
         </article>
     </section>
 
     <section>
         <article>
-            <img src="merch image/grey shirt.png">
-            <img src="merch image/Orange_Nemesis.png">
-            <img src="merch image/black shirt.png">
+            <img src="merch image/brown trion hat.png">
+            <img src="merch image/green trion hat.png">
+            <img src="merch image/white trion hat.png">
         </article>
     </section>
 
     <section>
         <article>
-            <img src="merch image/big logo black shirt.png">
-            <img src="merch image/big logo grey shirt.png">
-            <img src="merch image/big logo white shirt.png">
+            <img src="merch image/orange trion hat.png">
+            <img src="merch image/purple trion hat.png">
+            <img src="merch image/yellow trion hat.png">
         </article>
     </section>
     
