--- a/shoes.html
+++ b/shoes.html
@@ -32,25 +32,25 @@
 
     <section>
         <article>
-            <img src="merch image/T-shirts_trion_merch.png">
-            <img src="merch image/white shirt.png">
-            <img src="merch image/blue shirt.png">
+            <img src="merch image/Shoes_trion_merch.png">
+            <img src="merch image/red trion shoes.jpg">
+            <img src="merch image/blue trion shoes.png">
         </article>
     </section>
 
     <section>
         <article>
-            <img src="merch image/grey shirt.png">
-            <img src="merch image/Orange_Nemesis.png">
-            <img src="merch image/black shirt.png">
+            <img src="merch image/cyan trion shoes.jpg">
+            <img src="merch image/brown trion shoes.jpg">
+            <img src="merch image/green trion shoes.jpg">
         </article>
     </section>
 
     <section>
         <article>
-            <img src="merch image/big logo black shirt.png">
-            <img src="merch image/big logo grey shirt.png">
-            <img src="merch image/big logo white shirt.png">
+            <img src="merch image/white trion shoes.png">
+            <img src="merch image/orange trion shoes.jpg">
+            <img src="merch image/purple trion shoes.jpg">
         </article>
     </section>
 </body>
