nemesis configurator is made and complete

--- a/black-widow.html
+++ b/black-widow.html
@@ -43,7 +43,7 @@
                 <section>
                   <p>A living, breathing beast of power.</p>
                   <p>Ask your local Trion dealership about the Black Widow. <br></p>
-                  <a href="#">Configure your Nemesis</a>
+                  <a href="config-black_widow.html">Configure your Black Widow</a>
                 </section>
               </article>
 
