--- a/config-black_widow.html
+++ b/config-black_widow.html
@@ -4,19 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flex.css">
-    <title>config-black_widow</title>
+    <title>config-nemesis</title>
 </head>
+<nav role="navigation">
+    <ul>
+      <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+      <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="models.html">Models</a></li>
+          <li><a href="about-us.html">About Us</a></li>
+          <li><a href="merch.html">Merch</a></li>
+          <li><a href="account.html">Account</a></li>
+          <li><a href="models-configurator.html">Configurator</a></li>
+          <li><a href="shopping_Shopping Cart.html">Shopping Shopping Cart</a></li>
+        </ul>
+      </li>
+    </ul>
+  </nav>
 <body>
-    <!-- THIS ARTICLE IS EXTERIOR CONFIG-->
-    <article>
-        <section>
-            <img src="/trion_homepage_images/blk-widow.avif" width="100%" alt="config">
-        </section>
-        <section>
-            <img src="/trion_homepage_images/nemesis trion car.PNG" width="100%" alt="config">
-        </section>
-                             
-
+    <article class="config_option-controller">
+        <div class="config_image">
+            <img class="image_config_controller" src="/trion_homepage_images/racing_blk-widow.avif" width="100%" alt="config">
+        </div>
+        <div class="config_options_widow">
+            <a href="black-widow_hubcap1.html">HUBCAPS</a>
+            <a href="black-widow_design_original.html">CAR DESIGNS</a>        
+            <a href="nem_tint_original.html">WINDOW TINT</a>
+            <a href="black-widow_spoiler1.html">SPOILERS</a>
+            <a href="account_config_history.html">Your Configurations</a>
+            <a href="black-widow.html">About the Black Widow</a>        
+        </div>
+    </article>
+        
     <footer>
         <section class="footer-title">
           <p>TRION</p>
@@ -29,7 +49,8 @@
         </section>
          <section class="footer_buttons">     
           <a href="models.html">MODELS</a>
-          <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+          <a href="about-us.html">ABOUT US</a> 
+          <a href="merch.html">MERCH </a>
           <a href="account.html">ACCOUNT</a>                               
           <a href="models-configurator.html">CONFIGURATOR</a>
     </footer>
