--- a/nem_hubcap-polished.html
+++ b/nem_hubcap-polished.html
@@ -25,14 +25,14 @@
             </ul>
           </nav>
     </header>
-    <article class="config_option-controller">
-        <img class="hubcap-image-flexstart" src="/trion_homepage_images/config_logo_polished-type.jpg" width="100%" alt="config">
-        <div class="config_options-logo">
-            <a href="nem_hubcap-polished.html">POLISHED LOGO</a>
-            <a href="nem_hubcap-sunset.html">SUNSET</a>        
-            <a href="nem_hubcap-true_american.html">TRUE-AMERICAN</a>
-            <a id="config-options_confirm-option" href="/change-apply-confirmation.html">Confirm selection</a>   
-        </div>
+    <article class="config_option-controller-special">
+      <img class="hubcap-image-flexstart" src="/trion_homepage_images/config_logo_polished-type.jpg" width="100%" alt="config">
+      <div class="config_options-special">
+          <a href="nem_hubcap-polished.html">POLISHED LOGO</a>
+          <a href="nem_hubcap-sunset.html">SUNSET</a>        
+          <a href="nem_hubcap-true_american.html">TRUE-AMERICAN</a>
+          <a id="config-options_confirm-option" href="/change-apply-confirmation.html">Confirm selection</a>   
+      </div>
         
         
     </article>
