--- a/nemesis_color-orange.html
+++ b/nemesis_color-orange.html
@@ -10,6 +10,7 @@
     <article class="next_prev-controller">
         <a href="nemesis_color-black.html">BLACK</a>
         <a class="equip_button_controller" href="/change-apply-confirmation.html">APPLY COLOR</a>
+        <a class="equip_button_controller" href="/config-nemesis.html">Back to Configurator</a>
         <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575-removebg-preview (1).png" width="100%" alt="config">
         <a href="nemesis_color-white.html">WHITE</a>
     </article>
