--- a/nemesis_color-navy.html
+++ b/nemesis_color-navy.html
@@ -10,6 +10,7 @@
     <article class="next_prev-controller">
         <a href="/nemesis_color-yellow.html">YELLOW</a>
         <a class="equip_button_controller" href="/change-apply-confirmation.html">APPLY COLOR</a>
+        <a class="equip_button_controller" href="/config-nemesis.html">Back to Configurator</a>
         <img src="/trion_homepage_images/blue trion car.jpg" width=100% alt="config">
         <a href="/nemesis_color-black.html">BLACK</a>
     </article>
