Hubcap pages for the black widow are ready.

--- a/black-widow_hubcap1.html
+++ b/black-widow_hubcap1.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="flex.css">
-        <title>nemesis_hubcap1</title>
+        <title>black-widow_hubcap1</title>
     </head>
     <body>
         <header>
@@ -27,13 +27,12 @@
               </nav>
         </header>
         <article  class="config_option-controller-hubcaps">
-            <img class="config-image_controller" src="/trion_homepage_images/black-widow_hubcap2.jpg" width="30%" alt="config">
-            <div>
-                <a href="nem_hubcap1.html">OPTION 1</a>
-                <a href="nem_hubcap2.html">OPTION 2</a>        
-                <a href="nem_hubcap3.html">OPTION 3</a>
-                <a href="nem_hubcap4.html">OPTION 4</a>
-                <a id="config-options_confirm-option" href="/change-apply-confirmation.html">Confirm selection</a>   
+            <img class="image-container_hubcap" src="/trion_homepage_images/black-widow_hubcap2.jpg" width="30%" alt="config">
+            <div class="config-options-widow">
+                <a href="black-widow_hubcap1.html">OPTION 1</a>
+                <a href="black-widow_hubcap2.html">OPTION 2</a>        
+                <a href="black-widow_hubcap3.html">OPTION 3</a>
+                <a id="config-options_confirm-option" href="/change-apply-confirmation-black-widow.html">Confirm selection</a>   
             </div>
             
             
