--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         </section>
          <section class="footer_buttons">     
           <a href="models.html">MODELS</a>
-          <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+          <a href="about-us.html">ABOUT US</a> 
+          <a href="merch.html">MERCH </a>
           <a href="account.html">ACCOUNT</a>                               
           <a href="models-configurator.html">CONFIGURATOR</a>
     </footer>
