Configuration pages complete. Finishing touches needed

--- a/account_config_history.html
+++ b/account_config_history.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="flex.css">
+  <title>black-widow_spoiler1</title>
 </head>
 <body>
     <header>
@@ -23,6 +24,10 @@
             </ul>
           </nav>
     </header>
+            <article class="text-container-apply-confirm">
+              <h1>YOU DO NOT HAVE ANY SAVED CONFIGURATIONS</h1>
+              <a href="models-configurator.html">BACK TO CONFIGURATOR</a>
+            </article>
     <footer>
       <section class="footer-title">
         <p>TRION</p>
