--- a/config-black_widow.html
+++ b/config-black_widow.html
@@ -30,7 +30,7 @@
         <div class="config_options_widow">
             <a href="black-widow_hubcap1.html">HUBCAPS</a>
             <a href="black-widow_design_original.html">CAR DESIGNS</a>        
-            <a href="nem_tint_original.html">WINDOW TINT</a>
+            <a href="black-widow_tint1.html">WINDOW TINT</a>
             <a href="black-widow_spoiler1.html">SPOILERS</a>
             <a href="account_config_history.html">Your Configurations</a>
             <a href="black-widow.html">About the Black Widow</a>        
