--- a/interior-nemesis2.html
+++ b/interior-nemesis2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="flex.css">
-    <title>nemesis-regular-interior</title>
+    <title>nemesis-red-interior</title>
 </head>
 <nav role="navigation">
     <ul>
@@ -24,7 +24,7 @@
   </nav>
 <body>
     <article class="config_option-controller">
-        <img class="image_config_controller" src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" width="100%" alt="config">
+        <img class="image_config_controller" src="/trion_homepage_images/nemesis-interior-red.jpg" width="100%" alt="config">
         <div class="config_options_widow">
             <a href="interior-nemesis.html">ORIGINAL</a>
             <a href="interior-nemesis2.html">RED VARIANT</a>
