--- a/change-apply-confirmation_back-to-config.html
+++ b/change-apply-confirmation_back-to-config.html
@@ -31,7 +31,18 @@
         <h1>CHANGE APPLIED</h1>
         <a href="models-configurator.html">BACK TO CONFIGURATOR</a>
     </article>
-    
+
+    <style>
+        footer{
+           margin-top: auto;
+        }
+
+        body{
+            min-height: 100vh;
+            display: grid;
+            grid-template-rows: 1fr auto;
+        }
+    </style>
     <footer>
         <section class="footer-title">
           <p>TRION</p>
