--- a/account_config_history.html
+++ b/account_config_history.html
@@ -28,24 +28,35 @@
               <h1>YOU DO NOT HAVE ANY SAVED CONFIGURATIONS</h1>
               <a href="models-configurator.html">BACK TO CONFIGURATOR</a>
             </article>
-    <footer>
-      <section class="footer-title">
-        <p>TRION</p>
-      </section>
-      <section class="footer_content">
-        <p>CONTACT</p>
-        <p>INSERT EMAIL HERE:</p>
-        <p>________________________</p>
-        <p>Call us: #(123)456-7890</p>
-      </section>
-      <article class="footer_buttons">
-        <a href="#">ACCESSIBILITY</a>
-        <a href="#">MODELS</a>
-        <a href="#">MERCH</a>
-        <a href="#">ABOUT US</a>
-      </article></footer>
-  <article class="footer_extra">
-      <p>Created by Lukas and Jack; November 2024</p>
-  </article>
+            <style>
+              footer{
+                 margin-top: auto;
+              }
+        
+              body{
+                  min-height: 100vh;
+                  display: grid;
+                  grid-template-rows: 1fr auto;
+              }
+          </style>
+          <footer>
+              <section class="footer-title">
+                <p>TRION</p>
+              </section>
+              <section class="footer_content">
+                <p>CONTACT</p>
+                <p>INSERT EMAIL HERE:</p>
+                <p>________________________</p>
+                <p>Call us: #(123)456-7890</p>
+              </section>
+               <section class="footer_buttons">     
+                <a href="models.html">MODELS</a>
+                <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+                <a href="account.html">ACCOUNT</a>                               
+                <a href="models-configurator.html">CONFIGURATOR</a>
+          </footer>
+            <article class="footer_extra">
+              <p>Created by Lukas and Jack; November 2024</p>
+            </article>
 </body>
 </html>
