--- a/change-apply-confirmation-black-widow.html
+++ b/change-apply-confirmation-black-widow.html
@@ -32,22 +32,34 @@
         <a href="config-black_widow.html">BACK TO CONFIGURATOR</a>
     </article>
     
-    <footer>
-        <section class="footer-title">
-          <p>TRION</p>
-        </section>
-        <section class="footer_content">
-          <p>CONTACT</p>
-          <p>INSERT EMAIL HERE:</p>
-          <p>________________________</p>
-          <p>Call us: #(123)456-7890</p>
-        </section>
-         <section class="footer_buttons">     
-          <a href="models.html">MODELS</a>
-          <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
-          <a href="account.html">ACCOUNT</a>                               
-          <a href="models-configurator.html">CONFIGURATOR</a>
-    </footer>
+
+    <style>
+      footer{
+         margin-top: auto;
+      }
+
+      body{
+          min-height: 100vh;
+          display: grid;
+          grid-template-rows: 1fr auto;
+      }
+  </style>
+  <footer>
+      <section class="footer-title">
+        <p>TRION</p>
+      </section>
+      <section class="footer_content">
+        <p>CONTACT</p>
+        <p>INSERT EMAIL HERE:</p>
+        <p>________________________</p>
+        <p>Call us: #(123)456-7890</p>
+      </section>
+       <section class="footer_buttons">     
+        <a href="models.html">MODELS</a>
+        <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+        <a href="account.html">ACCOUNT</a>                               
+        <a href="models-configurator.html">CONFIGURATOR</a>
+  </footer>
     <article class="footer_extra">
       <p>Created by Lukas and Jack; November 2024</p>
     </article>
