--- a/interior-nemesis2.html
+++ b/interior-nemesis2.html
@@ -34,6 +34,17 @@
         </div>
     </article>
         
+    <style>
+        footer{
+           margin-top: auto;
+        }
+  
+        body{
+            min-height: 100vh;
+            display: grid;
+            grid-template-rows: 1fr auto;
+        }
+    </style>
     <footer>
         <section class="footer-title">
           <p>TRION</p>
@@ -46,8 +57,7 @@
         </section>
          <section class="footer_buttons">     
           <a href="models.html">MODELS</a>
-          <a href="about-us.html">ABOUT US</a> 
-          <a href="merch.html">MERCH </a>
+          <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
           <a href="account.html">ACCOUNT</a>                               
           <a href="models-configurator.html">CONFIGURATOR</a>
     </footer>
