--- a/models-configurator.html
+++ b/models-configurator.html
@@ -35,11 +35,10 @@
             </section>
             <section>
                 <h2>NEMESIS CONFIGURATOR</h2>
-                <a class="interior-exterior_selection" href="interior-nemesis.html">Configurate Exterior<img class="image-button" src="/trion_homepage_images/Nemesis_Interior_render1-1024x575.jpg" alt="configurate nemesis"></a>
-                <a class="interior-exterior_selection" href="config-nemesis.html">Configurate Interior<img class="image-button" src="/trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.png" alt="configurate nemesis"></a>
+                <a class="interior-exterior_selection" href="interior-nemesis.html">Configurate Interior<img class="image-button" src="/trion_homepage_images/Nemesis_Interior_render1-1024x575.jpg" alt="configurate nemesis"></a>
+                <a class="interior-exterior_selection" href="config-nemesis.html">Configurate Exterior<img class="image-button" src="/trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.png" alt="configurate nemesis"></a>
                 <h2>BLACK WIDOW CONFIGURATOR</h2>
-                <a class="interior-exterior_selection" href="config-black_widow.html">Configurate Interior<img class="image-button-2" src="/trion_homepage_images/racing_blk-widow.avif" alt="configurate nemesis"></a>
-                <a class="interior-exterior_selection" href="interior-black_widow.html">Configurate Exterior<img class="image-button" src="/trion_homepage_images/Nemesis_Interior_render3-1024x458.jpg" alt="configurate nemesis"></a>
+                <a class="interior-exterior_selection" href="config-black_widow.html">Configurate Exterior<img class="image-button-2" src="/trion_homepage_images/racing_blk-widow.avif" alt="configurate nemesis"></a>
             </section>
         </article>
     <footer>
