--- a/checkout.html
+++ b/checkout.html
@@ -203,6 +203,7 @@
               <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
             </label>
             <input type="submit" value="Continue to checkout" class="btn">
+            
           </form>
         </div>
       </div>
@@ -214,10 +215,11 @@
           <p><a href="#">Product 3</a> <span class="price">$8</span></p>
           <p><a href="#">Product 4</a> <span class="price">$2</span></p>
           <hr>
-          <p>Total <span class="price" style="color:black"><b>$30</b></span></p>
+          <p style="color: black;">Total <span class="price" style="color:black"><b>$30</b></span></p>
         </div>
       </div>
     </div>
+
 
     <footer>
       <section class="footer-title">
