--- a/checkout.html
+++ b/checkout.html
@@ -31,7 +31,6 @@
 
     <style>
     body {
-      font-family: Arial;
       font-size: 17px;
       padding: 8px;
     }
@@ -209,7 +208,7 @@
       </div>
       <div class="col-25">
         <div class="container">
-          <h4>Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
+          <h4 style="color: black">Cart <span class="price" style="color:black"><i class="fa fa-shopping-cart"></i> <b>4</b></span></h4>
           <p><a href="#">Product 1</a> <span class="price">$15</span></p>
           <p><a href="#">Product 2</a> <span class="price">$5</span></p>
           <p><a href="#">Product 3</a> <span class="price">$8</span></p>
