Home page complete

--- a/index.html
+++ b/index.html
@@ -57,22 +57,31 @@
     </div>
 
   <article  class="box_control">
+    <section class="content_box-new">
+      <h1>Welcome</h1>
+    </section>
       <section class="content_box">
-        <p>The SEMA (Specialty Equipment Market Association) Auto Show is an annual trade event in Las Vegas showcasing the latest in automotive products, customization, and aftermarket innovations. For Trion Supercars, SEMA provides critical exposure, enabling the brand to connect with potential partners, media, and customers, which is vital for growth and market presence in the competitive supercar industry.</p>
-      </section>
-      <section class="image_box">
-        <img src="trion_homepage_images/sema.png" width="100%" alt="a">
+        <p>At Trion, we beleive that power is everything. That is why our vehicles' horsepower is incomparable. The Trion Nemesis runs with over 2000 horsepower, and though that is an acheivement on our end, it is only the beginning of a line of highly powerful cars.</p>
       </section>
   </article>
+      <article class="img_control">
+        <section class="image_box">
+          <img src="trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.png " width="50%" alt="a">
+        </section>
+      </article>
+
+
 
   <article  class="box_control">
     <section class="content_box">
-      <p>Trion Electric Supercars is partnering with Career Technical Education Charter High School, Duncan Polytechnical High School, the Center for Advanced Research and Technology, and Fresno State to help develop modifications for its car of the future, "Nemesis."</p>
-    </section>
-    <section class="image_box">
-      <img src="trion_homepage_images/name.png" width="100%" alt="a">
+      <p>Explore our vehicles <a class="quick-link" href="/models.html">here</a>, on this website. You will leave changed.</p>
     </section>
   </article>
+    <article>
+      <section class="image_box">
+        <img src="trion_homepage_images/nemesis trion car.PNG" width="60%" alt="a">
+      </section>
+    </article>
     
     <footer>
         <section class="footer-title">
