--- a/about-us.html
+++ b/about-us.html
@@ -107,11 +107,12 @@
         <p>Call us: #(123)456-7890</p>
       </section>
       <article class="footer_buttons">
-        <a href="#">ACCESSIBILITY</a>
-        <a href="#">MODELS</a>
-        <a href="#">MERCH</a>
-        <a href="#">ABOUT US</a>
-      </article></footer>
+        <a href="models.html">MODELS</a>
+    <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+    <a href="account.html">ACCOUNT</a>                               
+    <a href="models-configurator.html">CONFIGURATOR</a>
+      </section>
+  </footer>
   <article class="footer_extra">
     <p>Created by Lukas and Jack; November 2024</p>
   </article>
