--- a/account-virtual_concierge.html
+++ b/account-virtual_concierge.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="flex.css">
+  <title>Account Virtual Concierge</title>
 </head>
 <body>
     <header>
@@ -23,27 +24,43 @@
             </ul>
           </nav>
 
+          <article class="text-container-apply-confirm">
+            <img src="/trion_homepage_images/phone_icon.png">
+            <h1>VIRTUAL CONCIERGE IS CURRENTLY UNAVAILABLE</h1>
+            <a href="models-configurator.html">BACK TO CONFIGURATOR</a>
+          </article>
 
           
     </header>
-    <footer>
-      <section class="footer-title">
-        <p>TRION</p>
-      </section>
-      <section class="footer_content">
-        <p>CONTACT</p>
-        <p>INSERT EMAIL HERE:</p>
-        <p>________________________</p>
-        <p>Call us: #(123)456-7890</p>
-      </section>
-      <article class="footer_buttons">
-        <a href="#">ACCESSIBILITY</a>
-        <a href="#">MODELS</a>
-        <a href="#">MERCH</a>
-        <a href="#">ABOUT US</a>
-      </article></footer>
-  <article class="footer_extra">
-      <p>Created by Lukas and Jack; November 2024</p>
-  </article>
+  <style>
+    footer{
+      margin-top: auto;
+   }
+
+   body{
+       min-height: 100vh;
+       display: grid;
+       grid-template-rows: 1fr auto;
+   }
+</style>
+<footer>
+   <section class="footer-title">
+     <p>TRION</p>
+   </section>
+   <section class="footer_content">
+     <p>CONTACT</p>
+     <p>INSERT EMAIL HERE:</p>
+     <p>________________________</p>
+     <p>Call us: #(123)456-7890</p>
+   </section>
+    <section class="footer_buttons">     
+     <a href="models.html">MODELS</a>
+     <a href="about-us.html">ABOUT US</a> <a href="merch.html">MERCH </a>
+     <a href="account.html">ACCOUNT</a>                               
+     <a href="models-configurator.html">CONFIGURATOR</a>
+</footer>
+ <article class="footer_extra">
+   <p>Created by Lukas and Jack; November 2024</p>
+ </article>
 </body>
 </html>
