virtual concierge update

--- a/account-virtual_concierge.html
+++ b/account-virtual_concierge.html
@@ -24,8 +24,10 @@
             </ul>
           </nav>
 
+          <article>
+            <img class="icon" src="/trion_homepage_images/pngwing.com.png" alt="icon"> 
+          </article> 
           <article class="text-container-apply-confirm">
-            <img src="/trion_homepage_images/phone_icon.png">
             <h1>VIRTUAL CONCIERGE IS CURRENTLY UNAVAILABLE</h1>
             <a href="models-configurator.html">BACK TO CONFIGURATOR</a>
           </article>
