Virtual concierge almost complete

--- a/account-virtual_concierge.html
+++ b/account-virtual_concierge.html
@@ -8,32 +8,62 @@
 </head>
 <body>
     <header>
-        <nav role="navigation">
+      <nav role="navigation">
+        <ul>
+          <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
+          <li class="dropdown"><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
             <ul>
-              <li><a href="index.html"><img src="trion_homepage_images/Trion_logo.png" class="home_button" width="55rem" alt="aeradsf"></a></li>
-                <li><a><img src="/trion_homepage_images/menu.png" class="hamburger" width="60rem" alt="r"></a>
-                  <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="models.html">Models</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="merch.html">Merch</a></li>
-                    <li><a href="account.html">Account</a></li>
-                    <li><a href="models-configurator.html">Configurator</a></li>
-                  </ul>
-              </li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="models.html">Models</a></li>
+              <li><a href="about-us.html">About Us</a></li>
+              <li><a href="merch.html">Merch</a></li>
+              <li><a href="account.html">Account</a></li>
+              <li><a href="models-configurator.html">Configurator</a></li>
+              <li><a href="shopping_Shopping Cart.html">Shopping Shopping Cart</a></li>
             </ul>
-          </nav>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
           <article>
+          <section class="center-h1-v2">
+            <h1>Virtual Concierge</h1>
+          </section>
+          <section>
             <img class="icon" src="/trion_homepage_images/pngwing.com.png" alt="icon"> 
-          </article> 
-          <article class="text-container-apply-confirm">
-            <h1>VIRTUAL CONCIERGE IS CURRENTLY UNAVAILABLE</h1>
-            <a href="models-configurator.html">BACK TO CONFIGURATOR</a>
+          </section> 
           </article>
+          
+        <style>
+          input[type=text] {
+            width: 50%;
+            margin-left: 20.5rem;
+            margin-bottom: 6rem;
+            padding: 12px;
+            border: 1px solid #ccc;
+            border-radius: 3px;
+          }
+          .center-h1{
+            justify-self: center;
+          }
+          .center-h1-v2{
+            margin-top: 7rem;
+            justify-self: center; 
+            font-size: xx-large;
+          }
+        </style>
+        <article class="box">
+        <section class="center-h1">
+            <h1>Got a question? Ask your virtual Concierge!</h1>
+        </section>
+        <section>
+          <input type="text" id="fname" name="firstname" placeholder="Username">
+        </section>
+        <article>
 
           
-    </header>
+
   <style>
     footer{
       margin-top: auto;
