--- a/account-virtual_concierge.html
+++ b/account-virtual_concierge.html
@@ -44,23 +44,15 @@
             border: 1px solid #ccc;
             border-radius: 3px;
           }
-          .center-h1{
-            justify-self: center;
-          }
-          .center-h1-v2{
-            margin-top: 7rem;
-            justify-self: center; 
-            font-size: xx-large;
-          }
         </style>
-        <article class="box">
+        <article>
         <section class="center-h1">
             <h1>Got a question? Ask your virtual Concierge!</h1>
         </section>
         <section>
-          <input type="text" id="fname" name="firstname" placeholder="Username">
+          <input type="text" id="fname" name="firstname" placeholder="Ex: Where is the nearest Trion dealer?">
         </section>
-        <article>
+        <article> 
 
           
 
