--- a/models.html
+++ b/models.html
@@ -26,25 +26,37 @@
       </nav>
     </header>
         <article>
-            <section>
+              <section>
                 <img src="/trion_homepage_images/9_25_-rear-34-tilt-lit_fin-1024x575.png" width="100%" alt="cool_car">
-                <h1>Models</h1>
-                <p>Explore the definition of power in our range of supercars. The excitement awaits you.</p>
-            </section>
+              </section>
+              <section class="models_text-box">
+                <h1 class="models_text-box-h1">Models</h1> 
+                <p class="models_text-box-p">Explore the definition of power in our range of supercars. The excitement awaits you.</p>
+              </section>
             <section>
                 <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_fr-crop-1024x576.png" width="100%" alt="cool_car">
-                <p>Unbeatable power. High Performance. Cuttin-edge technology. Every Trion vehicle boasts in such characteristics. The percision and effort put into every Trion supercar, from creating the concept to engraving the badge, will run shivers through your bones. The thrill is real.</p>
+            </section>
+            <section class="models_text-box">
+              <p class="models_text-box-p">Unbeatable power. High Performance. Cuttin-edge technology. Every Trion vehicle boasts in such characteristics. The percision and effort put into every Trion supercar, from creating the concept to engraving the badge, will run shivers through your bones. The thrill is real.</p>
+            </section>
+            <section class="models_text-box">
+                <h1 class="models_text-box-h1">The Nemesis</h1>
+                <p class="models_text-box-p">Power. Performance. Agility. This is what the nemisis was built for. The aerodynamics of the Nemisis give it the ability to peirce through the wind. It's power is like that of wild horses, which allows the Nemesis to beat a legion of them.</p>
             </section>
             <section>
-                <h1>The Nemesis</h1>
-                <p>Power. Performance. Agility. This is what the nemisis was built for. The aerodynamics of the Nemisis give it the ability to peirce through the wind. It's power is like that of wild horses, which allows the Nemesis to beat a legion of them.</p>
                 <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575.png" width="100%" alt="cool_car">
+            </section>
+            <section class="models_text-box">
                 <a href="nemesis.html">Explore</a>
             </section>
+            <section class="models_text-box">
+                <h1 class="models_text-box-h1">The Black Widow</h1>
+                <p class="models_text-box-p">Vengeance is written in it's name. The Black Widow is not childsplay.</p>
+            </section>
             <section>
-                <h1>The Black Widow</h1>
-                <p>Vengeance is written in it's name. The Black Widow is not childsplay.</p>
                 <img src="/trion_homepage_images/blk-widow.avif" width="100%" alt="cool_car">
+            </section>
+            <section class="models_text-box">
                 <a href="black-widow.html">Explore</a>
             </section>
           </article>
