--- a/nemesis.html
+++ b/nemesis.html
@@ -26,15 +26,16 @@
       </nav>
         </header>
 
-            <article>
-                <section class="hero_image">
-                    <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.jpg" alt="nemesis black">
-                    <p>It breathes in the beating rain into it's openings like a speeding swordfish. It yearns for speed, and it calls to all car enthusiasts. The Nemesis is a performance monster. Pure power. Incredible agility.</p>
-                </section>
+            <article> 
+                <section class="models_text-box">
+                  <h1 class="models_text-box-nemesis-title">The Nemesis</h1>
+                </section> 
                 <section>
                     <img src="/trion_homepage_images/Nemesis_blk_corrug-1024x633.png" alt="nemesis black">
-                    <p>PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE PUT NEMESIS TECH SPECS HERE</p>
                 </section>
+                <section class="models_text-box">
+                  <p class="models_text-box-p">It breathes in the beating rain into it's openings like a speeding swordfish. It yearns for speed, and it calls to all car enthusiasts. The Nemesis is a performance monster. Pure power. Incredible agility.</p>
+                </section> 
                 <section>
                     <img src="/trion_homepage_images/Nemesis_blk_corrug-1024x633.png" alt="nemesis black">
                     <p>The Nemesis goes beyond other supercars. It is an electric powerhouse, with power that allows it ot accellerate in a split-second. You'll miss it if you blink twice.</p>
