Black widow page is finished

--- a/black-widow.html
+++ b/black-widow.html
@@ -26,24 +26,23 @@
         </header>
 
             <article>
-                <section class="hero_image">
-                    <img src="/trion_homepage_images/blk-widow.avif" alt="black widow">
-                    <p>Inhale. Accellerate. Exhale. Repeat. This breath-taking power will make your blood rush at the speed of light. The Black Widow takes electric performance beyond the human imagination. All it requires is attitude.</p>
+                <section class="nemesis_title-box">
+                  <h1 class="models_text-box-p">The Black Widow</h1>
+                </section> 
+                <section>
+                    <img src="/trion_homepage_images/nemesis trion car.PNG" width="100%" alt="black widow">
+                </section>
+                <section class="models_text-box">
+                    <p class="models_text-box-p">Inhale. Accellerate. Exhale. Repeat. This breath-taking power will make your blood rush at the speed of light. The Black Widow takes electric performance beyond the human imagination. All it requires is attitude.</p>
                 </section>
                 <section>
-                    <img src="/trion_homepage_images/nemesis trion car.PNG" alt="black widow">
-                    <p>INSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECSINSERT BLACK WIDOW TECH SPECS</p>
-                </section>
-                <section>
-                    <img src="/trion_homepage_images/racing_blk-widow.avif" alt="black widow">
-                    <p>The Black widow takes power beyond that of the nemesis, but it is still very performant.</p>
+                    <img src="/trion_homepage_images/racing_blk-widow.avif" width="100%" alt="black widow">
                 </section>
             </article>
             <article>
-                <section>
-                  <p>A living, breathing beast of power.</p>
-                  <p>Ask your local Trion dealership about the Black Widow. <br></p>
-                  <a href="config-black_widow.html">Configure your Black Widow</a>
+                <section class="models_text-box2">
+                  <p class="models_text-box2-p">A living, breathing beast of power. Electric performance has never been this exciting. Ask your local Trion dealership about the Black Widow or <a href="config-black_widow.html">configure your Black Widow.</a>
+                  </p>
                 </section>
               </article>
 
