--- a/models.html
+++ b/models.html
@@ -41,7 +41,7 @@
             </section>
             <section class="models_text-box">
                 <h1 class="models_text-box-h1">The Nemesis</h1>
-                <p class="models_text-box-p">Power. Performance. Agility. This is what the nemisis was built for. The aerodynamics of the Nemisis give it the ability to peirce through the wind. It's power is like that of wild horses, which allows the Nemesis to beat a legion of them.</p>
+                <p class="models_text-box-p">Power. Performance. Agility. This is what the Nemisis was built for. The aerodynamics of the Nemisis give it the ability to peirce through the wind. its power is like that of wild horses, which allows the Nemesis to beat a legion of them.</p>
             </section>
             <section>
                 <img src="/trion_homepage_images/9_26-dp-coverprac_fin-1024x575.png" width="100%" alt="cool_car">
@@ -51,7 +51,7 @@
             </section>
             <section class="models_text-box">
                 <h1 class="models_text-box-h1">The Black Widow</h1>
-                <p class="models_text-box-p">Vengeance is written in it's name. The Black Widow is not childsplay.</p>
+                <p class="models_text-box-p">Vengeance is written in its name. The Black Widow is not childsplay.</p>
             </section>
             <section>
                 <img src="/trion_homepage_images/blk-widow.avif" width="100%" alt="cool_car">
