--- a/nemesis.html
+++ b/nemesis.html
@@ -27,25 +27,26 @@
         </header>
 
             <article> 
-                <section class="models_text-box">
-                  <h1 class="models_text-box-nemesis-title">The Nemesis</h1>
+                <section class="nemesis_title-box">
+                  <h1 class="models_text-box-p">The Nemesis</h1>
                 </section> 
                 <section>
-                    <img src="/trion_homepage_images/Nemesis_blk_corrug-1024x633.png" alt="nemesis black">
+                    <img src="/trion_homepage_images/7_25-Lux-Black-Nemesis_fr34-1024x575.png" width="100%" alt="nemesis black">
                 </section>
                 <section class="models_text-box">
                   <p class="models_text-box-p">It breathes in the beating rain into it's openings like a speeding swordfish. It yearns for speed, and it calls to all car enthusiasts. The Nemesis is a performance monster. Pure power. Incredible agility.</p>
                 </section> 
                 <section>
-                    <img src="/trion_homepage_images/Nemesis_blk_corrug-1024x633.png" alt="nemesis black">
-                    <p>The Nemesis goes beyond other supercars. It is an electric powerhouse, with power that allows it ot accellerate in a split-second. You'll miss it if you blink twice.</p>
+                    <img src="/trion_homepage_images/Nemesis_blk_corrug-1024x633.png" width="100%" alt="nemesis black">
+                </section>
+                <section class="models_text-box">
+                    <p class="models_text-box-p">The Nemesis goes beyond other supercars. It is an electric powerhouse, with power that allows it ot accellerate in a split-second. You'll miss it if you blink twice.</p>
                 </section>
             </article>
             <article>
-                <section>
-                  <p>A world of power is at your fingertips.</p>
-                  <p>Get in touch with a Trion dealer today. <br></p>
-                  <a href="config-nemesis.html">Configure your Nemesis</a>
+                <section class="models_text-box2">
+                  <p>A world of power is at your fingertips. Get in touch with a Trion dealer today. You can <a href="config-nemesis.html">configure your Nemesis</a> via this link.
+                  </p>
                 </section>
               </article>
 
